let's get the header working properly now and then the footer

--- a/Dynamic/franciscomatignon/tsconfig.json
+++ b/Dynamic/franciscomatignon/tsconfig.json
@@ -23,12 +23,13 @@
       "dom"
     ],
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictPropertyInitialization": false
   }
 }
