only projectdetails left for mobile version. need css refactoring

--- a/Dynamic/franciscomatignon/src/assets/database/projects.json
+++ b/Dynamic/franciscomatignon/src/assets/database/projects.json
@@ -1,1 +1,52 @@
-[{"name":"Table and rug scene","clients":[{"name":"D.F.A. Arquitectos","link":"instagram.com/dfaarquitectos"}],"year":2021,"location":{"city":"La Pampa","country":"AR"},"text":"","link":"table-and-rug-scene","images":["../../assets/database/Projects/0 - Table and rug scene/Images/1.webp"]},{"name":"Interior 1","clients":[{"name":"Carlos Baute","link":"carlosbaute.com"},{"name":"El Tuti Tuttini","link":""}],"year":2021,"location":{"city":"Cochabamba","country":"AR"},"text":"Lorem ipsum dolor sit amet; Angular Live Development Server is listening on localhost:4200, open your browser on","link":"interior-1","images":["../../assets/database/Projects/1 - Interior 1/Images/1.webp","../../assets/database/Projects/1 - Interior 1/Images/2.webp","../../assets/database/Projects/1 - Interior 1/Images/3.webp","../../assets/database/Projects/1 - Interior 1/Images/4.webp","../../assets/database/Projects/1 - Interior 1/Images/5.webp","../../assets/database/Projects/1 - Interior 1/Images/6.webp","../../assets/database/Projects/1 - Interior 1/Images/7.webp","../../assets/database/Projects/1 - Interior 1/Images/8.webp","../../assets/database/Projects/1 - Interior 1/Images/9.webp"]}]
+{"projects": [
+  {
+    "name": "Table and rug scene",
+    "clients": [
+      {
+        "name": "D.F.A. Arquitectos",
+        "link": "instagram.com/dfaarquitectos"
+      }
+    ],
+    "year": 2021,
+    "location": {
+      "city": "La Pampa",
+      "country": "AR"
+    },
+    "text": "",
+    "link": "table-and-rug-scene",
+    "images": [
+      "../../assets/database/Projects/0 - Table and rug scene/Images/1.webp"
+    ]
+  },
+  {
+    "name": "Interior 1",
+    "clients": [
+      {
+        "name": "Carlos Baute",
+        "link": "carlosbaute.com"
+      },
+      {
+        "name": "El Tuti Tuttini",
+        "link": ""
+      }
+    ],
+    "year": 2021,
+    "location": {
+      "city": "Cochabamba",
+      "country": "AR"
+    },
+    "text": "Lorem ipsum dolor sit amet; Angular Live Development Server is listening on localhost:4200, open your browser on",
+    "link": "interior-1",
+    "images": [
+      "../../assets/database/Projects/1 - Interior 1/Images/1.webp",
+      "../../assets/database/Projects/1 - Interior 1/Images/2.webp",
+      "../../assets/database/Projects/1 - Interior 1/Images/3.webp",
+      "../../assets/database/Projects/1 - Interior 1/Images/4.webp",
+      "../../assets/database/Projects/1 - Interior 1/Images/5.webp",
+      "../../assets/database/Projects/1 - Interior 1/Images/6.webp",
+      "../../assets/database/Projects/1 - Interior 1/Images/7.webp",
+      "../../assets/database/Projects/1 - Interior 1/Images/8.webp",
+      "../../assets/database/Projects/1 - Interior 1/Images/9.webp"
+    ]
+  }
+]}
