dealing with los carouseles

--- a/Dynamic/franciscomatignon/src/assets/database/projectsArray.json
+++ b/Dynamic/franciscomatignon/src/assets/database/projectsArray.json
@@ -1,1 +1,1 @@
-{"0":"table-and-rug-scene","1":"interior-1"}
+{"0":"table-and-rug-scene","1":"interior-1","2":"d2-apartment","3":"brown-bedroom","4":"villa-béa-inspired","5":"guayaquil-117"}
