--- a/Dynamic/franciscomatignon/package.json
+++ b/Dynamic/franciscomatignon/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
     "file-system": "^2.2.2",
+    "ngx-pipes": "^3.2.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
