--- a/Dynamic/franciscomatignon/src/assets/database/projects.json
+++ b/Dynamic/franciscomatignon/src/assets/database/projects.json
@@ -1,154 +1,1 @@
-[
-  {
-    "name": "Table and rug scene",
-    "clients": [
-      {
-        "name": "D.F.A. Arquitectos",
-        "link": "instagram.com/dfaarquitectos"
-      }
-    ],
-    "year": 2021,
-    "location": {
-      "city": "La Pampa",
-      "country": "AR"
-    },
-    "text": "",
-    "link": "table-and-rug-scene",
-    "images": [],
-    "cover": "../../assets/Projects/0 - Table and rug scene/Images/1.webp"
-  },
-  {
-    "name": "Interior 1",
-    "clients": [
-      {
-        "name": "Carlos Baute",
-        "link": "carlosbaute.com"
-      },
-      {
-        "name": "El Tuti Tuttini",
-        "link": ""
-      }
-    ],
-    "year": 2021,
-    "location": {
-      "city": "Cochabamba",
-      "country": "AR"
-    },
-    "text": "Lorem ipsum dolor sit amet; Angular Live Development Server is listening on localhost:4200, open your browser on",
-    "link": "interior-1",
-    "images": [
-      "../../assets/Projects/1 - Interior 1/Images/2.webp",
-      "../../assets/Projects/1 - Interior 1/Images/3.webp",
-      "../../assets/Projects/1 - Interior 1/Images/4.webp",
-      "../../assets/Projects/1 - Interior 1/Images/5.webp",
-      "../../assets/Projects/1 - Interior 1/Images/6.webp",
-      "../../assets/Projects/1 - Interior 1/Images/7.webp",
-      "../../assets/Projects/1 - Interior 1/Images/8.webp",
-      "../../assets/Projects/1 - Interior 1/Images/9.webp"
-    ],
-    "cover": "../../assets/Projects/1 - Interior 1/Images/1.webp"
-  },
-  {
-    "name": "D2 Apartment",
-    "clients": [
-      {
-        "name": "",
-        "link": ""
-      }
-    ],
-    "year": 2022,
-    "location": {
-      "city": "",
-      "country": ""
-    },
-    "text": "",
-    "link": "d2-apartment",
-    "images": [
-      "../../assets/Projects/3 - D2 Apartment/Images/1.webp",
-      "../../assets/Projects/3 - D2 Apartment/Images/2.webp"
-    ],
-    "cover": "../../assets/Projects/3 - D2 Apartment/Images/0.webp"
-  },
-  {
-    "name": "Brown bedroom",
-    "clients": [
-      {
-        "name": "",
-        "link": ""
-      }
-    ],
-    "year": 2023,
-    "location": {
-      "city": "",
-      "country": ""
-    },
-    "text": "",
-    "link": "brown-bedroom",
-    "images": [
-      "../../assets/Projects/4 - Brown bedroom/Images/1.webp",
-      "../../assets/Projects/4 - Brown bedroom/Images/2.webp"
-    ],
-    "cover": "../../assets/Projects/4 - Brown bedroom/Images/0.webp"
-  },
-  {
-    "name": "Villa Béa Inspired",
-    "clients": [
-      {
-        "name": "",
-        "link": ""
-      }
-    ],
-    "year": 2023,
-    "location": {
-      "city": "",
-      "country": ""
-    },
-    "text": "",
-    "link": "villa-béa-inspired",
-    "images": [
-      "../../assets/Projects/5 - Villa Béa Inspired/Images/1.webp",
-      "../../assets/Projects/5 - Villa Béa Inspired/Images/2.webp",
-      "../../assets/Projects/5 - Villa Béa Inspired/Images/3.webp",
-      "../../assets/Projects/5 - Villa Béa Inspired/Images/4.webp",
-      "../../assets/Projects/5 - Villa Béa Inspired/Images/5.webp"
-    ],
-    "cover": "../../assets/Projects/5 - Villa Béa Inspired/Images/0.webp"
-  },
-  {
-    "name": "Guayaquil 117",
-    "clients": [
-      {
-        "name": "Lito Vitale",
-        "link": "https://www.instagram.com"
-      },
-      {
-        "name": "ACA",
-        "link": ""
-      },
-      {
-        "name": "Tuti",
-        "link": ""
-      },
-      {
-        "name": "Piruchi",
-        "link": ""
-      },
-      {
-        "name": "Martiniano",
-        "link": ""
-      }
-    ],
-    "year": 2023,
-    "location": {
-      "city": "",
-      "country": ""
-    },
-    "text": "",
-    "link": "guayaquil-117",
-    "images": [
-      "../../assets/Projects/6 - Guayaquil 117/Images/1.webp",
-      "../../assets/Projects/6 - Guayaquil 117/Images/2.webp"
-    ],
-    "cover": "../../assets/Projects/6 - Guayaquil 117/Images/0.webp"
-  }
-]
+[{"name":"Table and rug scene","clients":[{"name":"D.F.A. Arquitectos","link":"instagram.com/dfaarquitectos"}],"year":2021,"location":{"city":"La Pampa","country":"AR"},"text":"","link":"table-and-rug-scene","images":[],"cover":"../../assets/Projects/0 - Table and rug scene/Images/1.webp"},{"name":"Interior 1","clients":[{"name":"Carlos Baute","link":"carlosbaute.com"},{"name":"El Tuti Tuttini","link":""}],"year":2021,"location":{"city":"Cochabamba","country":"AR"},"text":"Lorem ipsum dolor sit amet; Angular Live Development Server is listening on localhost:4200, open your browser on","link":"interior-1","images":["../../assets/Projects/1 - Interior 1/Images/2.webp","../../assets/Projects/1 - Interior 1/Images/3.webp","../../assets/Projects/1 - Interior 1/Images/4.webp","../../assets/Projects/1 - Interior 1/Images/5.webp","../../assets/Projects/1 - Interior 1/Images/6.webp","../../assets/Projects/1 - Interior 1/Images/7.webp","../../assets/Projects/1 - Interior 1/Images/8.webp","../../assets/Projects/1 - Interior 1/Images/9.webp"],"cover":"../../assets/Projects/1 - Interior 1/Images/1.webp"},{"name":"D2 Apartment","clients":[{"name":"","link":""}],"year":2022,"location":{"city":"","country":""},"text":"","link":"d2-apartment","images":["../../assets/Projects/3 - D2 Apartment/Images/1.webp","../../assets/Projects/3 - D2 Apartment/Images/2.webp"],"cover":"../../assets/Projects/3 - D2 Apartment/Images/0.webp"},{"name":"Brown bedroom","clients":[{"name":"","link":""}],"year":2023,"location":{"city":"","country":""},"text":"","link":"brown-bedroom","images":["../../assets/Projects/4 - Brown bedroom/Images/1.webp","../../assets/Projects/4 - Brown bedroom/Images/2.webp"],"cover":"../../assets/Projects/4 - Brown bedroom/Images/0.webp"},{"name":"Villa Béa Inspired","clients":[{"name":"","link":""}],"year":2023,"location":{"city":"","country":""},"text":"","link":"villa-béa-inspired","images":["../../assets/Projects/5 - Villa Béa Inspired/Images/1.webp","../../assets/Projects/5 - Villa Béa Inspired/Images/2.webp","../../assets/Projects/5 - Villa Béa Inspired/Images/3.webp","../../assets/Projects/5 - Villa Béa Inspired/Images/4.webp","../../assets/Projects/5 - Villa Béa Inspired/Images/5.webp"],"cover":"../../assets/Projects/5 - Villa Béa Inspired/Images/0.webp"},{"name":"Guayaquil 117","clients":[{"name":"","link":""}],"year":2023,"location":{"city":"","country":""},"text":"","link":"guayaquil-117","images":["../../assets/Projects/6 - Guayaquil 117/Images/1.webp","../../assets/Projects/6 - Guayaquil 117/Images/2.webp"],"cover":"../../assets/Projects/6 - Guayaquil 117/Images/0.webp"}]
